<resources>

    <string name="app_name">bb</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="radio_commendation">首页</string>
    <string name="radio_search">搜索</string>
    <string name="radio_category">分类</string>
    <string name="radio_my">我</string>
    <string name="radio_more">更多</string>

</resources>